<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.showtrack.ui.dashboard.DashboardFragment"
        android:label="@string/dashboardFragment_label"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboardFragment_to_filmSearchFragment"
            app:destination="@id/filmSearchFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_filmGenreFragment"
            app:destination="@id/filmGenreFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_filmItemFragment"
            app:destination="@id/filmItemFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_serieGenreFragment"
            app:destination="@id/serieGenreFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_serieSearchFragment"
            app:destination="@id/serieSearchFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_serieItemFragment"
            app:destination="@id/serieItemFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_aboutUsFragment"
            app:destination="@id/aboutUsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/recyclerFilmsFragment"
        android:name="com.example.showtrack.ui.flm.filmsrecycler.RecyclerFilmsFragment"
        android:label="fragment_recycler_films"
        tools:layout="@layout/fragment_recycler_films" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.showtrack.ui.prf.profile.prof.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.showtrack.ui.hm.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/recyclerSeriesFragment"
        android:name="com.example.showtrack.ui.srs.seriesrecycler.RecyclerSerieFragment"
        android:label="fragment_recyler_series"
        tools:layout="@layout/fragment_recycler_series" />
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.example.showtrack.ui.prf.aboutus.AboutUsFragment"
        android:label="@string/aboutUsFragment_label"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/filmGenreFragment"
        android:name="com.example.showtrack.ui.flm.filmgenre.FilmGenreFragment"
        android:label="@string/filmGenreFragment_label"
        tools:layout="@layout/fragment_film_genre" >
        <action
            android:id="@+id/action_filmGenreFragment_to_filmItemFragment"
            app:destination="@id/filmItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/filmSearchFragment"
        android:name="com.example.showtrack.ui.flm.filmsearch.FilmSearchFragment"
        android:label="@string/filmSearchFragment_label"
        tools:layout="@layout/fragment_film_search" >
        <action
            android:id="@+id/action_filmSearchFragment_to_filmItemFragment"
            app:destination="@id/filmItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/serieItemFragment"
        android:name="com.example.showtrack.ui.srs.serieitem.SerieItemFragment"
        android:label="fragment_serie_item"
        tools:layout="@layout/fragment_serie_item" />
    <fragment
        android:id="@+id/filmItemFragment"
        android:name="com.example.showtrack.ui.flm.filmitem.FilmItemFragment"
        android:label="FilmItemFragment" />
    <fragment
        android:id="@+id/serieGenreFragment"
        android:name="com.example.showtrack.ui.srs.seriegenre.SerieGenreFragment"
        android:label="@string/serieGenreFragment_label"
        tools:layout="@layout/fragment_serie_genre" >
        <action
            android:id="@+id/action_serieGenreFragment_to_serieItemFragment"
            app:destination="@id/serieItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/serieSearchFragment"
        android:name="com.example.showtrack.ui.srs.seriesearch.SerieSearchFragment"
        android:label="@string/serieSearchFragment_label"
        tools:layout="@layout/fragment_serie_search" >
        <action
            android:id="@+id/action_serieSearchFragment_to_serieItemFragment"
            app:destination="@id/serieItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.showtrack.ui.prf.profile.settings.SettingsFragment"
        android:label="@string/settingsFragment_label"
        tools:layout="@layout/fragment_settings" />
</navigation>